2009-01-13  kitone  <kitone@gna.org>

	* Makefile.am:
	* intltool_se_pattern.m4:
	New file for subtitleeditor pattern (se-pattern).

2008-11-24  kitone  <kitone@gna.org>

	* Makefile.am:
	* intltool.m4:
	Restore intltool.m4 file. Fix bug #12626.

2008-11-24  kitone  <kitone@gna.org>

	reviewed by: <delete if not using a buddy>

	* Makefile.am:
	* acx_ccache.m4:

2008-11-13  kitone  <kitone@gna.org>

	* intltool_se_plugin.m4:
	Update with new filename. se-plugin.desktop.in to se-plugin.in

2008-11-12  kitone  <kitone@gna.org>

	* Makefile.am:
	* gst_element_check_required.m4:
	Add SE_GST_ELEMENT_CHECK_REQUIRED marco.

2008-11-12  kitone  <kitone@gna.org>

	* Makefile.am:
	* intltool_se_plugin.m4:
	Add intltool_se_plugin.m4 file. (Patch: Luboš Staněk)

2008-11-04  kitone  <kitone@gna.org>

	* Makefile.am:
	Update.

	* Makefile.in:
	* codeset.m4:
	* gettext.m4:
	* glibc21.m4:
	* iconv.m4:
	* intdiv0.m4:
	* intltool.m4:
	* intmax.m4:
	* inttypes-pri.m4:
	* inttypes.m4:
	* inttypes_h.m4:
	* isc-posix.m4:
	* lcmessage.m4:
	* lib-ld.m4:
	* lib-link.m4:
	* lib-prefix.m4:
	* longdouble.m4:
	* longlong.m4:
	* nls.m4:
	* printf-posix.m4:
	* progtest.m4:
	* signed.m4:
	* size_max.m4:
	* stdint_h.m4:
	* uintmax_t.m4:
	* ulonglong.m4:
	* wchar_t.m4:
	* wint_t.m4:
	* xsize.m4:
	Remove files.

2008-11-03  kitone  <kitone@gna.org>

	* Makefile.in:

2008-11-03  kitone  <kitone@gna.org>

	* Makefile.in:
	libtoolize subtitleeditor.

2008-10-27  kitone  <kitone@gna.org>

	* Makefile.in:
	Remove dependance of pcre.

2008-08-20  kitone  <kitone@gna.org>

	* Makefile.in:
	Add dependence of glibmm >= 2.6.13. (patch by Luboš Staněk)

2008-08-13  kitone  <kitone@gna.org>

	* Makefile.in:
	Add intltool.
	Patches by Luboš Staněk.

2008-08-13  kitone  <kitone@gna.org>

	* Makefile.in:
	* acx_pthread.m4:
	* ax_lang_compiler_ms.m4:
	Adds missing files from autoconf-archive for the AX_CHECK_GL macro.
	Patches by Luboš Staněk.

2008-06-12  kitone  <kitone@gna.org>

	* Makefile.in:
	Update.
