@@ -1,3 +1,8 @@
+2009-06-23  kitone  <kitone@gna.org>
+
+	* intltool.m4:
+	Update (last tools F11).
+
 2009-01-13  kitone  <kitone@gna.org>
 
 	* Makefile.am:
